--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="module-head">
               <h2>Relevant Courses</h2>
               <div class="module-tools">
-                <input class="input input-sm" id="coursesSearch" type="search" placeholder="搜索课程..." />
+                <input class="input input-sm" id="coursesSearch" type="search" placeholder="Search" />
               </div>
             </div>
             <div class="module-body">
@@ -97,7 +97,7 @@
             <div class="module-head">
               <h2>Projects</h2>
               <div class="module-tools">
-                <input class="input input-sm" id="projectsSearch" type="search" placeholder="搜索项目..." />
+                <input class="input input-sm" id="projectsSearch" type="search" placeholder="Search" />
               </div>
             </div>
             <div class="module-body">
@@ -114,7 +114,7 @@
             <div class="module-head">
               <h2>Publications</h2>
               <div class="module-tools">
-                <input class="input input-sm" id="pubsSearch" type="search" placeholder="搜索论文..." />
+                <input class="input input-sm" id="pubsSearch" type="search" placeholder="Search" />
               </div>
             </div>
             <div class="module-body">
